k8s/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: web
  labels:
     app: web
spec:
  selector:
     matchLabels:
       app: web
  replicas: 2
  template: 
     metadata:
       labels:
         app: web
     spec:
       containers:
       - name: web
         image: salmastudydocker/blog_web_app:latest
         ports:
          - containerPort: 8000
