k8s/deployment-djanjo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: salmastudydocker/blog_web_app:1
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: django-storage
          mountPath: /app/static
      volumes:
      - name: django-storage
        persistentVolumeClaim:
          claimName: django-pvc
