k8s/mariadb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  replicas: 7
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: mariadb-container
        image: mariadb:latest
        ports:
        - containerPort: 3306
