k8s/statfulset_postgres.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      -  ip-10-0-2-150   # or k8s-node-2
      containers:
      - name: postgres
        image: salmastudydocker/postgres:latest
        volumeMounts:
        - name: postgres-storage
          mountPath: /app/static
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
