k8s/Djanjo-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: ivolve
spec:
  selector:
    app: web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30008
  type: NodePort
