k8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-lb
  namespace: ivolve
  labels:
    app: web
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
