k8s/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: ivolve
  labels:
    app: postgres
spec:
  type: LoadBalancer
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432       # External port
      targetPort: 5432 # Container port
