k8s/postgres-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: ivolve
spec:
  selector:
    app: postgres
  ports:
    - name: postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
