k8s/basedname-ingress.yml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django_ingress
  namespace: ivolve
spec:
  ingressClassName: nginx
  rules:
  - host: ahly.io
    http:
      paths:
      - backend:
          service:
            name: django-lb
            port:
              number: 8000
        path: /
        pathType: Exact
  - host: zamalek.io
    http:
      paths:
      - backend:
          service:
            name: db
            port: 
              number: 5432
        path: /
        pathType: Exact
status:
  loadBalancer: {}
